--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>To-Do-List App</title>
+    <title>To-Do-List</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -12,9 +12,11 @@
     <div class="container">
         <h2>To Do List App</h2>
         <p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
+
         <form name="toDoList">
             <input type="text" name="ListItem" id="input" />
         </form>
+
         <div onclick="newItem()" id="button">Add</div>
         <br />
         <ol id="list"></ol>
@@ -23,7 +25,7 @@
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
         integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
